Fix tooltip z-index

--- a/src/components/Skill.scss
+++ b/src/components/Skill.scss
@@ -5,9 +5,6 @@
   left: 35%;
   padding-top: 1.5rem;
   width: 30%;
-  /* Debug */
-  // background-color: red;
-  /* Debug */
   .skill-panel {
     padding: 0.6rem;
     background-color: #282A36;
@@ -27,6 +24,7 @@
         margin-right: 0.4rem;
         width: 50px;
         .skill-up {
+          /* 技能升級按鈕 */
           position: absolute;
           top: -60%;
           width: 40px;
@@ -36,7 +34,7 @@
           background-repeat: no-repeat;
           background-position: center;
           opacity: 1;
-          z-index: 1;
+          z-index: 2;
           transition: all .2s ease-in-out;
           &.disable {
             /* visibility: hidden; */
@@ -46,6 +44,7 @@
           }
         }
         .skill-level {
+          /* 技能等級 */
           display: flex;
           margin-top: 0.4rem;
           padding: 0.6px;
@@ -55,6 +54,7 @@
           border: 1px solid #2D3032;
           background-color: #2D3032;
           .skill-level-current {
+            /* 技能當前等級 */
             flex: 4;
             margin: 0 1px;
             height: inherit;
